<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    tools:context="com.crescentflare.workerschedulerexample.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin"
        android:text="@string/message"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/queue_status"/>
            <TextView
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/queue_status_running"/>
            <TextView
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/queue_status_queued"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/queue_scheduler"/>
            <TextView
                android:id="@+id/activity_main_scheduler_run"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/activity_main_scheduler_idle"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/queue_continuous_pool"/>
            <TextView
                android:id="@+id/activity_main_continuous_pool_run"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/activity_main_continuous_pool_idle"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/queue_parallel_pool"/>
            <TextView
                android:id="@+id/activity_main_parallel_pool_run"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/activity_main_parallel_pool_idle"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/queue_serial_pool"/>
            <TextView
                android:id="@+id/activity_main_serial_pool_run"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/activity_main_serial_pool_idle"
                android:layout_width="30dip"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dip"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:text="@string/message_controls"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12dip"
        android:paddingRight="12dip">
        <Button
            android:id="@+id/activity_main_scheduler_spawn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spawn_scheduler"/>
        <Button
            android:id="@+id/activity_main_continuous_pool_spawn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spawn_continuous_pool"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="12dip"
        android:paddingRight="12dip">
        <Button
            android:id="@+id/activity_main_parallel_pool_spawn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spawn_parallel_pool"/>
        <Button
            android:id="@+id/activity_main_serial_pool_spawn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spawn_serial_pool"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dip"
        android:paddingBottom="4dip"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:text="@string/message_log"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin"
        android:background="#e0e0e0">
        <LinearLayout
            android:id="@+id/activity_main_worker_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"/>
    </ScrollView>
</LinearLayout>
